--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <p>Hello world!</p>
 
-  <script src="js/index.js"></script>
-  <!-- <script src="js/script.js"></script> -->
+  <!-- <script src="js/index.js"></script> -->
+  <script src="js/script.js"></script>
 </body>
 </html>
